# graphql-example

./: .env  .gitignore  Cargo.toml  README.md  build.rs  run-server.sh
db-migrations/: 100000000_init_common.sql  100000001_init_users_and_clients.sql  100000002_demo_users.sql  100000003_init_characters.sql  100000004_demo_characters.sql
src/: cli.rs  database.rs  error.rs  lazy_data.rs  main.rs  state.rs  try_into_service_document.rs
src/deus_ex_machina/: mod.rs
src/model/: mutation.rs  query.rs  subscription.rs
src/model/enums/: augmentation_type.rs  character_race.rs
src/model/interfaces/: augmented_character.rs  character.rs
src/model/types/: android.rs  mod.rs  user.rs
src/schema_diff/: diff_location.rs  mod.rs  named.rs
src/sql_queries/: mod.rs  sql_android.rs  sql_character.rs  sql_cyborg.rs  sql_human.rs  sql_user.rs
src/utils/: mod.rs  option_utils.rs
