[package]
name = "graphql-example"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
async-graphql-parser = "7.0"

tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0"
option-inspect-none = "1.0"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
async-trait = "0.1"

axum-helpers = { git = "https://github.com/bytifex/axum-helpers.git", hash = "6b125a19ad7d26b638d0be4db545ed89436b0835" }

[build-dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread"] }

[features]
expose-internal-error = []
